--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <div class="plant-background">
       <div class="container">
         <!-- header -->
         <nav class="navbar">
-          <img src="../assets/images/logo.png" alt="logo-image" />
+          <img src="./assets/images/logo.png" alt="logo-image" />
           <ul class="header-content">
             <li class="navlink"><a class="links" href="#Home">Home</a></li>
             <li class="navlink"><a class="links" href="#About">About</a></li>
@@ -59,11 +59,11 @@
               <div class="leaf-icon">
                 <img
                   class="favicon"
-                  src="../assets/images/favicon.ico"
+                  src="./assets/images/favicon.ico"
                   alt=""
                 />
               </div>
-              <img class="logo-image" src="../assets/images/logo.png" alt="" />
+              <img class="logo-image" src="./assets/images/logo.png" alt="" />
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga
                 tempore, similique ex nemo repellat, nostrum quisquam deserunt
